--- a/css/junhyuk.css
+++ b/css/junhyuk.css
@@ -79,5 +79,9 @@ li span {
 	font-weight: bold;
 	white-space: nowrap;
 	text-align: right;
-  padding-right: 10px;
+  padding-right: 7px;
+}
+
+tr, td{
+  vertical-align: top;
 }
